--- a/app/src/main/res/layout/tags_dialog.xml
+++ b/app/src/main/res/layout/tags_dialog.xml
@@ -30,6 +30,8 @@
         android:id="@+id/lvTags"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5pt"
+        android:layout_marginRight="10pt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/llPatternContainer"
