--- a/app/src/main/res/layout/run_to_exercise_buttons.xml
+++ b/app/src/main/res/layout/run_to_exercise_buttons.xml
@@ -8,8 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:id="@+id/viewButtons">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
