--- a/app/src/main/res/layout/line_chart.xml
+++ b/app/src/main/res/layout/line_chart.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.4"
-        android:background="@color/dark_blue">
+        android:background="@color/colorPrimaryDark">
 
     </com.github.mikephil.charting.charts.LineChart>
 </LinearLayout>
