--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -14,6 +14,8 @@
         android:id="@+id/layoutDates"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5pt"
+        android:layout_marginRight="5pt"
         android:layout_marginTop="10pt"
         android:gravity="center"
         android:orientation="horizontal"
@@ -63,6 +65,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
+        android:layout_marginLeft="5pt"
+        android:layout_marginRight="5pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutDates"
@@ -72,9 +76,7 @@
             android:id="@+id/chartHolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10pt"
-            android:layout_marginTop="10pt"
-            android:layout_marginRight="10pt"
+            android:layout_marginTop="5pt"
             android:layout_weight="1">
 
         </com.github.mikephil.charting.charts.LineChart>
@@ -82,9 +84,7 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10pt"
             android:layout_marginTop="5pt"
-            android:layout_marginRight="10pt"
             android:layout_weight="0.2">
 
             <TableRow
@@ -107,7 +107,6 @@
                 android:paddingBottom="5pt">
 
                 <TextView
-                    android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txtPercent" />
@@ -125,7 +124,6 @@
                 android:paddingBottom="5pt">
 
                 <TextView
-                    android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txtAttempts" />
@@ -143,7 +141,6 @@
                 android:paddingBottom="5pt">
 
                 <TextView
-                    android:id="@+id/textView9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txtPoints" />
@@ -172,6 +169,7 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -186,12 +184,12 @@
                         android:layout_marginRight="3pt"
                         app:srcCompat="@drawable/ic_label_outline_black_18dp" />
 
-                <TextView
-                    android:id="@+id/tvTags"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:singleLine="true" />
+                    <TextView
+                        android:id="@+id/tvTags"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:singleLine="true" />
                 </LinearLayout>
             </TableRow>
         </TableLayout>
@@ -210,9 +208,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:gravity="center_vertical"
-            android:paddingLeft="10pt"
-            android:paddingTop="5pt"
-            android:paddingRight="5pt">
+            android:paddingTop="5pt">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -220,7 +216,6 @@
                 android:paddingBottom="5pt">
 
                 <TextView
-                    android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Тренировок" />
@@ -239,7 +234,6 @@
                 android:paddingBottom="5pt">
 
                 <TextView
-                    android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Сыграно" />
@@ -257,7 +251,6 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Ударов всего" />
