IDs was changed Delete icon was changed

--- a/app/src/main/res/layout/compound_default_outcome.xml
+++ b/app/src/main/res/layout/compound_default_outcome.xml
@@ -56,17 +56,17 @@
 
     </ViewSwitcher>
 
-    <ImageButton
-        android:id="@+id/btnSave"
+    <ImageView
+        android:id="@+id/btnSaveOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:srcCompat="@android:drawable/ic_menu_save"
+        app:srcCompat="@drawable/ic_save_black_24dp"
         tools:visibility="gone" />
 
-    <ImageButton
-        android:id="@+id/btnRemoveStep"
+    <ImageView
+        android:id="@+id/btnRemoveOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+        app:srcCompat="@drawable/ic_delete_black_24dp" />
 </TableRow>
