--- a/app/src/main/res/layout/activity_new_compound.xml
+++ b/app/src/main/res/layout/activity_new_compound.xml
@@ -15,9 +15,7 @@
         android:id="@+id/lbName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="25dp"
         android:gravity="center_horizontal"
         android:text="TextView"
         android:textSize="24sp"
@@ -27,12 +25,10 @@
 
     <TableLayout
         android:id="@+id/partsTable"
-        android:layout_width="409dp"
-        android:layout_height="557dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toTopOf="@+id/btnSaveCompound"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
