--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -17,7 +17,9 @@
         android:gravity="center_horizontal"
         android:textSize="30sp"
         app:layout_constraintTop_toBottomOf="@id/stdtoobar"
-        tools:text="@string/txtBTSAbbr" />
+        android:text="@string/txtBTSAbbr"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvProgramName"
@@ -30,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvBTSAbbr"
-        tools:text="@string/txtProgramName" />
+        android:text="@string/txtProgramName" />
 
     <TextView
         android:id="@+id/tvBy"
