--- a/app/src/main/res/drawable/dashed_border.xml
+++ b/app/src/main/res/drawable/dashed_border.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:bottom="1dp"
-        android:left="-6dp"
-        android:right="-6dp"
-        android:top="-6dp">
-
-        <shape android:shape="rectangle">
-            <stroke
-                android:width="2px"
-                android:color="@color/black_overlay"
-                android:dashWidth="9dp"
-                android:dashGap="3dp"></stroke>
-        </shape>
-    </item>
+    <shape android:shape="rectangle">
+        <stroke
+            android:width="2px"
+            android:color="@color/blue_worm14"
+            android:dashWidth="9dp"
+            android:dashGap="3dp"></stroke>
+    </shape>
 </layer-list>
