--- a/app/src/main/res/layout/compound_default_outcome.xml
+++ b/app/src/main/res/layout/compound_default_outcome.xml
@@ -3,68 +3,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="5pt">
 
-    <ViewSwitcher
-        android:id="@+id/swcDescription"
+    <TextView
+        android:id="@+id/lbStepName"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical">
+        android:layout_weight="0.7"
+        android:clickable="true"
+        android:gravity="bottom"
+        android:text="Miss. Poins"
+        android:textSize="10pt" />
 
-        <TextView
-            android:id="@+id/lbStepName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"
-            android:layout_weight="0.7"
-            android:text="Miss. Poins" />
-
-        <EditText
-            android:id="@+id/edStepDesc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.7"
-            android:text=";lk;lk;lk"
-            android:textSize="14sp"
-            android:theme="@style/AppTheme"
-            android:visibility="gone" />
-    </ViewSwitcher>
-
-    <ViewSwitcher
-        android:id="@+id/swcPoints"
+    <EditText
+        android:id="@+id/edStepDesc"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical">
+        android:layout_weight="0.7"
+        android:gravity="bottom"
+        android:text="Step name"
+        android:textSize="10pt"
+        android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/lbStepPoints"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"
-            android:layout_weight="0.2"
-            android:text="0" />
+    <TextView
+        android:id="@+id/lbStepPoints"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.2"
+        android:clickable="true"
+        android:text="0"
+        android:textSize="10pt" />
 
-        <EditText
-            android:id="@+id/edStepPoints"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.2"
-            android:inputType="number"
-            android:text="uytuytuyt"
-            android:textSize="14sp"
-            android:visibility="gone" />
-
-    </ViewSwitcher>
+    <EditText
+        android:id="@+id/edStepPoints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.2"
+        android:inputType="number"
+        android:text="2"
+        android:textSize="10pt"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/btnSaveOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:visibility="gone"
+        android:layout_weight="0.1"
         app:srcCompat="@drawable/ic_save_black_24dp"
         tools:visibility="gone" />
 
@@ -72,5 +59,7 @@
         android:id="@+id/btnRemoveOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="0.1"
         app:srcCompat="@drawable/ic_delete_black_24dp" />
 </TableRow>
