--- a/app/src/main/res/layout/aexercise_layout.xml
+++ b/app/src/main/res/layout/aexercise_layout.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_blue"
-    tools:context=".SimpleExerciseActivity">
+    android:background="@color/dark_blue">
 
     <LinearLayout
         android:id="@+id/fullscreen_content"
@@ -44,26 +42,63 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.1"
                 android:layout_gravity="left|center_vertical"
                 android:layout_marginRight="3pt"
+                android:layout_weight="0.1"
                 android:background="@color/colorPrimaryDark"
                 app:srcCompat="@drawable/empty_placeholder" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/lbPercent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/dark_blue"
-            android:fontFamily="sans-serif-condensed-medium"
+            android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
-            android:text="— —"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="28pt"
-            android:typeface="normal"
-            android:visibility="visible" />
+            android:weightSum="1">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:text="  "
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/lbPercent" />
+
+            <TextView
+                android:id="@+id/lbPercent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="1dp"
+                android:layout_marginRight="1dp"
+                android:background="@color/dark_blue"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:gravity="center_vertical"
+                android:text="— —"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="28pt"
+                android:typeface="normal"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/indicatorChartHolder"
+                app:layout_constraintStart_toEndOf="@+id/textView" />
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/indicatorChartHolder"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:background="@color/dark_blue"
+                app:layout_constraintBottom_toBottomOf="@+id/lbPercent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/lbPercent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/lbAttempts"
