--- a/app/src/main/res/layout/compound_default_outcome.xml
+++ b/app/src/main/res/layout/compound_default_outcome.xml
@@ -16,7 +16,7 @@
         android:layout_marginLeft="6pt"
         android:layout_marginTop="3pt"
         android:layout_marginBottom="3pt"
-        android:textSize="8pt" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edStepDesc"
@@ -27,7 +27,7 @@
         android:layout_marginLeft="6pt"
         android:layout_marginTop="3pt"
         android:layout_marginBottom="3pt"
-        android:textSize="8pt"
+        android:textSize="18sp"
         android:visibility="gone" />
 
     <TextView
@@ -39,7 +39,7 @@
         android:text="0"
         android:layout_marginTop="3pt"
         android:layout_marginBottom="3pt"
-        android:textSize="8pt" />
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edStepPoints"
@@ -50,7 +50,7 @@
         android:text="2"
         android:layout_marginTop="3pt"
         android:layout_marginBottom="3pt"
-        android:textSize="8pt"
+        android:textSize="18sp"
         android:visibility="gone" />
 
     <ImageView
@@ -68,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
-        android:layout_marginBottom="6pt"
+        android:layout_marginTop="3pt"
+        android:layout_marginBottom="3pt"
         app:srcCompat="@drawable/ic_delete_black_24dp" />
 </TableRow>
